--- a/py_logging_config.json
+++ b/py_logging_config.json
@@ -37,7 +37,7 @@
       "class": "logging.handlers.RotatingFileHandler",
       "level": "DEBUG",
       "formatter": "json",
-      "filename": "dialogue_logs/dialogue.log.jsonl",
+      "filename": "xxx_log.jsonl",
       "maxBytes": 10000,
       "backupCount": 3
     }
